# Hades-Workshop

./: .gitignore  .gitmodules  CMakeLists.txt  Hades-Workshop.vcxproj  Hades-Workshop.vcxproj.filters  HadesWorkshop.project  README.md  ffixdev.workspace
Source/: Assembly_Strings.h  BattleScenes.cpp  BattleScenes.h  CMakeLists.txt  Cards.cpp  Cards.h  Charmaps.cpp  Charmaps.h  ClusterData.cpp  ClusterData.h  Cluts.cpp  Cluts.h  Commands.cpp  Commands.h  CommonUtility.cpp  CommonUtility.h  Configuration.cpp  Configuration.h  Database_Animation.cpp  Database_Animation.h  Database_Assembly.cpp  Database_Assembly.h  Database_CSV.cpp  Database_CSV.h  Database_Common.h  Database_Item.cpp  Database_Item.h  Database_Resource.cpp  Database_Resource.h  Database_Script.cpp  Database_Script.h  Database_Spell.cpp  Database_Spell.h  Database_SpellAnimation.cpp  Database_SpellAnimation.h  Database_Steam.cpp  Database_Steam.h  Database_Text.cpp  Database_Text.h  DllCilMacro.cpp  (+110 more)
Source/Launcher/: Launcher.project  main.cpp  resource.rc
Source/Resource/: PlayControllerButton.xcf
share/: findFBXSDK.cmake
